--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ FIFA_datan/Rosters
 FIFA_datan/Tracking Data
 FIFA_datan/competitions.csv
 FIFA_datan/PFF FC Change Log.docx
+DSPFinalFIFA/__pycache__
