--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ FIFA_datan/Tracking Data
 FIFA_datan/competitions.csv
 FIFA_datan/PFF FC Change Log.docx
 DSPFinalFIFA/__pycache__
+DSPFinalFIFA/FIFA/__pycache__
